# calllock-server

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  V6-DEPLOYMENT-SUMMARY.md  package-lock.json  package.json  render.yaml  retell-ai-migration-guide.md  retell-llm-update.json  test-call.html
V2/: CLAUDE.md  HVAC_SMART_TAG_TAXONOMY.md  HVAC_TAXONOMY_IMPLEMENTATION_EXAMPLE.md  package-lock.json  package.json  render.yaml  retell-implementation-guide.md
V3/: .env.example  CLAUDE.md  package-lock.json  (+1 more)
pipecat-agent/: .dockerignore  .env.example  Dockerfile  fly.toml  pyproject.toml
pipecat-agent/docs/plans/: 2026-02-18-pipecat-brain-transfer-design.md  2026-02-18-pipecat-brain-transfer-plan.md
pipecat-agent/scripts/: call_transcript.py
pipecat-agent/src/calllock/: audio_resample.py  bot.py  circuit_breaker.py  classification.py  config.py  dashboard_sync.py  extraction.py  pipeline.py  post_call.py  processor.py  prompts.py  session.py  state_machine.py  states.py  tools.py  transcript.py  tts_fallback.py  validation.py
pipecat-agent/src/calllock_voice.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pipecat-agent/tests/: conftest.py  test_audio_resample.py  test_bot.py  test_call_transcript.py  test_classification.py  test_dashboard_sync.py  test_eval_tone.py  test_extraction.py  test_post_call.py  test_processor.py  test_prompts.py  test_rubric.py  test_session.py  test_state_machine.py  test_states.py  test_tools.py  test_transcript.py  test_tts_fallback.py  test_validation.py
pipecat-agent/tests/eval_data/: golden_transcripts.json  rubric.py
(+160 files in other folders)
