[project]
name = "calllock-voice"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pipecat-ai[silero,deepgram,openai,elevenlabs,cartesia,inworld]>=0.0.60",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "respx>=0.22.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "eval: LLM tone quality evaluation tests (require OPENAI_API_KEY, run with -m eval)",
]
